--- a/desafio-final/index.html
+++ b/desafio-final/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../assets/css/estilo.css">
+    <link rel="stylesheet" href="assets/css/estilo.css">
 </head>
 
 <body>
@@ -112,7 +112,7 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(../assets/img/foto5.png)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/foto5.png)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Iguana Page</h5>
                         <p class="card-text">
@@ -140,7 +140,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(../assets/img/foto4.png)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/foto4.png)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">CV</h5>
                         <p class="card-text">
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-12 col-sm-4 py-2">
                     <div class="card">
-                        <div class="image-top" style="background-image: url(../assets/img/foto2.png)"></div>
+                        <div class="image-top" style="background-image: url(assets/img/foto2.png)"></div>
                         <div class="card-body">
                             <h5 class="card-title fw-bold">Pagina Web</h5>
                             <p class="card-text">
